fixed turn skipping, finalize bid panel not appearing